value_props/liz_snapshot/src/syntax/Parser.C
// Copyright (C) 2009-2013, Texas A&M University.
// Copyright (C) 2014, Gabriel Dos Reis.
// All rights reserved.
// Written by Gabriel Dos Reis.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:
//
//     - Redistributions of source code must retain the above copyright
//       notice, this list of conditions and the following disclaimer.
//
//     - Redistributions in binary form must reproduce the above copyright
//       notice, this list of conditions and the following disclaimer in
//       the documentation and/or other materials provided with the
//       distribution.
//
//     - Neither the name of Liz, nor the names of its contributors may
//       be used to endorse or promote products derived from this software
//       without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
// IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
// TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
// PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER
// OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
// EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
// PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
// PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
// LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
// NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
// SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

#include <iterator>
#include <iostream>
#include <string>
#include <sstream>
#include <algorithm>

#include "Parser.H"

namespace liz {
   // -- Parser::IndentationManager --
   Parser::IndentationManager::IndentationManager(Parser* p, input::Column c)
         : parser(p) {
      parser->ctx.indents.push(c);
   }

   Parser::IndentationManager::~IndentationManager() {
      parser->ctx.indents.pop();
   }

   // -- Return true iff the value `t' is in the sequence `seq'.
   template<typename T, int N>
   static bool
   member(const T& t, const T (&seq)[N]) {
      return std::find(seq, seq + N, t) != seq + N;
   }

   template<typename T>
   static const T*
   is(const FixityForm* f) {
      return dynamic_cast<const T*>(f);
   }
   
   // -- ErrorAt --
   ErrorAt::ErrorAt(const std::string& s, const Token& t)
         : BasicError(s),
           tok(t)
   { }

   void
   ErrorAt::disclose_location_on(std::ostream& os) const {
      os << "on line " << line().number()
         << ", column " << column(token()) << ':' << '\n';
      os << line().text() << '\n';
      for (Ordinal i = 0; i < column(token()); ++i)
         os << ' ';
      os << '^' << '\n';
   }

   void error_at(const Token& t, const std::string& s) {
      throw ErrorAt(s, t);
   }

   // --
   static TokenIterator
   begin(const ParsingContext* ctx) {
      return ctx->cursor;
   }

   static TokenIterator
   end(const ParsingContext* ctx) {
      return ctx->last;
   }

   // Return true if we have exhausted the token stream.
   static bool
   at_eoi(const ParsingContext* ctx) {
      return begin(ctx) == end(ctx);
   }

   static const Token*
   current_token(const ParsingContext* ctx) {
      return &*begin(ctx);
   }
   
//    // Current indentation level
//    static input::Column
//    indentation(const ParsingContext* ctx) {
//       return ctx->indents.top();
//    }
   
   static void
   parse_error(Parser* parser, const std::string& msg) {
      if (at_eoi(parser->context()))
         parser->error(msg);
      else
         parser->error_at(msg, *current_token(parser->context()));
   }

   // Return true if the token pointed by `p' is a justification
   // mark at column `c'.
   static bool
   layout_justify_at(TokenIterator p, input::ColumnNumber c) {
      return p->kind == token::justify_tok and column(*p) == c;
   }

   // -- Helper functions to move forward through the input token stream.
   // -- to the parser.  We expected that the input stream may contain
   // -- comment, although it is common practice not to include them in
   // -- the original input token stream.

   static inline bool
   formatting(TokenIterator p) {
      const auto tk = p->kind;
      return tk == token::indent_tok
         or tk == token::justify_tok
         or tk == token::unindent_tok;
   }

   static const Token*
   advance_if_eq(TokenIterator& p, token::Kind tk) {
      if (p->kind == tk)
         return &*p++;
      return nullptr;
   }

   static bool
   match_formatted_wisecrack(TokenIterator& cur) {
      if (advance_if_eq(cur, token::wisecrack_tok))
         return true;
      auto p = cur;
      if (formatting(p) and advance_if_eq(++p, token::wisecrack_tok)) {
         cur = p;
         return true;
      }
      return false;
   }

   static TokenIterator
   skip_blank(TokenIterator& cur, TokenIterator last) {
      while (cur != last and match_formatted_wisecrack(cur))
         ;
      return cur;
   }

   // Checks if the next current token is of type `tt' and return a
   // pointer to the corresponding token object.  Otherwise, return null.
   static const Token*
   match(ParsingContext* ctx, token::Kind tt) {
      if (skip_blank(ctx->cursor, ctx->last) == ctx->last)
         return nullptr;
      else if (auto p = advance_if_eq(ctx->cursor, tt))
         return p;
      return nullptr;
   }

   // -- Same as match(), except that the token is allowed to be at
   // -- the start of a new line.
   static const Token*
   flexible_match(Parser* parser, token::Kind tk) {
      auto ctx = parser->context();
      // FIXME: Check that indentation level is greater than curruent.
      match(ctx, token::indent_tok);
      return match(ctx, tk);
   }

   // Return a pointer to the current token if it is of specified kind.
   static const Token*
   match_if(Parser* parser, bool pred(token::Kind)) {
      auto ctx = parser->context();
      if (skip_blank(ctx->cursor, ctx->last) == ctx->last)
         return nullptr;
      else if (pred(ctx->cursor->kind))
         return &*ctx->cursor++;
      return nullptr;
   }

   // Return a pointer to the nth token in the tokens stream, if there
   // are sufficient tokens; otherwise return null.  Comments tokens
   // are ignored.  The index is 0-based.
   static const Token*
   nth_token(ParsingContext* ctx, int n) {
      auto cur = ctx->cursor;
      while (skip_blank(cur, ctx->last) != ctx->last and n > 0) {
         ++cur;
         --n;
      }
      return n == 0 and cur != ctx->last ? &*cur : nullptr;
   }
   
   // Return true if the nth token in the tokens tream is of type
   // indicated by `tt'.  See also `nth_token'.
   static const Token*
   nth_token_is(ParsingContext* ctx, int n, token::Kind k) {
      const Token* t = nth_token(ctx, n);
      if (t != nullptr and t->kind == k)
         return t;
      return nullptr;
   }
   
   // Return true if the nth token in the tokens tream is of type
   // indicated by the predicate `pred'.  See also `nth_token'.
   template<typename Predicate>
   static bool
   nth_token_is(ParsingContext* ctx, int n, Predicate pred) {
      const Token* t = nth_token(ctx, n);
      return t != nullptr and pred(t->kind);
   }
   
   // return non-null if the next non-comment token is as indicated
   static const Token*
   next_token_is(ParsingContext* ctx, token::Kind tt) {
      return nth_token_is(ctx, 1, tt);
   }

   // Advance the cursor to current token by a given amount and return
   // a pointer to the token at the new position, if any.
   static const Token*
   advance(ParsingContext* ctx, int n = 1) {
      while (skip_blank(ctx->cursor, ctx->last) != ctx->last and n > 0)
         ++ctx->cursor, --n;
      return at_eoi(ctx) ? nullptr : current_token(ctx);
   }

   // -- Accept a newline indentation at a specific column.
   static const Token*
   match_justify_at(ParsingContext* ctx, input::Column c) {
      if (skip_blank(ctx->cursor, ctx->last) != ctx->last
          and layout_justify_at(ctx->cursor, c))
         return &*ctx->cursor++;
      return nullptr;
   }

   // -- Expect next line to start at specified indentation column.
   static void
   require_indentation_at(Parser* parser, input::Column c) {
      auto t = match(parser->context(), token::justify_tok);
      if (t == nullptr)
         parse_error(parser, "newline expected at column " + std::to_string(c));
      else if (column(*t) != c)
         parser->error_at("unexpected indentation level", *t);
   }

   static Ordinal
   layout_line_count(Parser* parser) {
      auto ctx = parser->context();
      auto cur = ctx->cursor;
      if (cur->kind != token::indent_tok)
         return 0;
      input::Column c = column(*cur);
      Cardinal line_count = 1;
      for (++cur; cur != ctx->last; ++cur)
         if (layout_justify_at(cur, c))
            ++line_count;
         else if (cur->kind == token::unindent_tok and column(*cur) < c)
            break;
      return line_count;
   }

   // If the parser's cursor is at a token of the specified class,
   // return a pointer to that token; otherwise null.
   static const Token*
   staring_at(Parser* parser, token::Kind tk) {
      auto ctx = parser->context();
      if (not at_eoi(ctx) and ctx->cursor->kind == tk)
         return &*ctx->cursor;
      return nullptr;
   }

   template<int N>
   static const Token*
   staring_at(Parser* parser, const token::Kind (&ts)[N]) {
      auto ctx = parser->context();
      for (int i = 0; i < N; ++i)
         if (not at_eoi(ctx) and ctx->cursor->kind == ts[i])
            return &*ctx->cursor;
      return nullptr;
   }

   // ------------------------
   // -- Parser combinators --
   // ------------------------

   // Return the matching closer token type of `tt'. Pairs of opening
   // and closing tokens ('brackets') are:
   //         "("   ")"
   //         "["   "]"
   //         "{"   "}"
   //         "<"   ">"
   //         "[|"  "|]"
   //         "{|"  "|}"
   static token::Kind closer(token::Kind tt) {
      switch (tt) {
      case token::open_paren_tok:
         return token::close_paren_tok;
         
      case token::open_brace_tok:
         return token::close_brace_tok;
         
      case token::open_bracket_tok:
         return token::close_bracket_tok;

      case token::less_tok:
         return token::greater_tok;

      case token::open_mbracket_tok:
         return token::close_mbracket_tok;

      case token::open_bar_brace_tok:
         return token::close_bracket_tok;
         
      default:
         throw BasicError("invalid enclosure token type");
      }
   }

   // The type of a function implementing a particular grammar production.
   using Production = const Ast* (*)(Parser*);

   // Checks for a required token, or else.
   static const Token*
   require(Parser* parser, token::Kind tt) {
      if (auto t = match(parser->context(), tt))
         return t;
      parse_error(parser, "expected " + show(tt));
      return nullptr;
   }

   // Attempt to match one of the token type indicated in the
   // array `ts'.  If successful return the corresponding token.
   template<int N>
   static const Token*
   match_one(Parser* parser, const token::Kind (&ts)[N]) {
      for (int i = 0; i < N; ++i)
         if (auto t = match(parser->context(), ts[i]))
            return t;
      return nullptr;
  }

   template<int N>
   static const OperatorAst*
   parse_symbol(Parser* parser, const token::Kind (&ts)[N]) {
      if (const Token* t = match_one(parser, ts))
         return parser->make_operator(*t);
      return nullptr;
   }

   static const OperatorAst*
   parse_symbol(Parser* parser, token::Kind tt) {
      if (auto t = match(parser->context(), tt))
         return parser->make_operator(*t);
      return nullptr;
   }

   // Match a specific `production', or else issue diagnostic `message'.
   template<typename T>
   static T
   must(Parser* parser, T production(Parser*), const std::string& message) {
      const T ast = production(parser);
      if (ast == T())
         parse_error(parser, message);
      return ast;
   }

   // Like the combinator 'must' except that `production' must be
   // bracketed by parenthesis indicated byt `tt'.
   template<typename T>
   static T
   match_enclosed(Parser* parser, T production(Parser*), token::Kind tt,
                  std::string diagnostic) {
      if (not match(parser->context(), tt))
         return T();
      T ast = must(parser, production, diagnostic);
      require(parser, closer(tt));
      return ast;
   }

   // Like the combinator 'match_enclosed' except that the whole
   // syntactic construct is optional.
   template<typename T>
   static T
   match_enclosed_optional(Parser* parser, T production(Parser*),
                           token::Kind tt, std::string diagnostic) {
      if (not match(parser->context(), tt))
         return T();
      if (not match(parser->context(), closer(tt))) {
         T ast = must(parser, production, diagnostic);
         require(parser, closer(tt));
         return ast;
      }
      return T();
   }

   // Match `production' enclosed in round brakcets.
   template<typename T>
   static inline T
   match_parenthesized(Parser* parser, T production(Parser*), std::string m) {
      return match_enclosed(parser, production, token::open_paren_tok, m);
   }

   // Like 'match_parenthesized', except that the construct is optional.
   template<typename T>
   static inline T
   match_parenthesized_optional(Parser* parser, T production(Parser*),
                                std::string diagnostic) {
      return match_enclosed_optional(parser, production,
                                     token::open_paren_tok, diagnostic);
   }

   template<typename T>
   static T
   require_enclosed(Parser* parser, T production(Parser*), token::Kind tt,
                    std::string diagnostic) {
      require(parser, tt);
      T ast = must(parser, production, diagnostic);
      require(parser, closer(tt));
      return ast;
   }

   template<typename T>
   static T
   require_enclosed_optional(Parser* parser, T production(Parser*),
                             token::Kind tt, std::string diagnostic) {
      require(parser, tt);
      if (not match(parser->context(), closer(tt))) {
         T ast = must(parser, production, diagnostic);
         require(parser, closer(tt));
         return ast;
      }
      return T();
   }

   template<typename T>
   static inline T
   require_parenthesized(Parser* parser, T production(Parser*),
                         std::string m) {
      return require_enclosed(parser, production, token::open_paren_tok, m);
   }

   template<typename T>
   static inline T
   require_angled_optional(Parser* parser, T production(Parser*),
                           std::string m) {
      return require_enclosed_optional(parser, production,
                                       token::less_tok, m);
   }

   template<typename T>
   static inline T
   require_bracketed(Parser* parser, T production(Parser*), std::string m) {
      return require_enclosed(parser, production, token::open_bracket_tok, m);
   }
   
   // Sequence parser combinator: parse `production' zero or more times.
   template<typename T>
   static Sequence<T>
   zero_or_more(Parser* parser, const T* production(Parser*)) {
      Sequence<T> seq;
      while (const T* ast = production(parser))
         seq.push_back(ast);
      return seq;
   }

   // Subroutine of indented.
   // Check that an indented single line is properly ended by
   // an unindentation or end of file.
   static void
   check_indented_line_end(Parser* parser, const Token* indent) {
      if (at_eoi(parser->context()))
         return;
      auto unindent = require(parser, token::unindent_tok);
      if (column(*indent) <= column(*unindent))
         parse_error(parser, "misplaced indentation");
   }

   // Parse a single indented line of syntactic form `prod'..
   template<typename T>
   static T
   indented(Parser* parser, T (*prod)(Parser*)) {
      auto start = parser->context()->cursor;
      auto indent = match(parser->context(), token::indent_tok);
      if (indent == nullptr)
         return nullptr;
      else if (auto x = prod(parser)) {
         check_indented_line_end(parser, indent);
         return x;
      }
      parser->context()->cursor = start;
      return nullptr;
   }

   // Same as indented, except that the indentation may be missing.
   template<typename T>
   static T
   possibly_indented(Parser* parser, T (*prod)(Parser*)) {
      if (layout_line_count(parser) == 1)
         return indented(parser, prod);
      return prod(parser);
   }

   // Sanity check the layout ending of a pile starting a column `col'.
   static bool
   at_pile_end(Parser* parser, input::ColumnNumber col) {
      auto ctx = parser->context();
      if (skip_blank(ctx->cursor, ctx->last) == ctx->last)
         return true;
      if (ctx->cursor->kind == token::unindent_tok
          and column(*ctx->cursor) < col) {
         ++ctx->cursor;
         return true;
      }
      return false;
   }

   template<typename T>
   static Sequence<T>
   pile(Parser* parser, const T* rule(Parser*)) {
      auto indent = require(parser, token::indent_tok);
      const auto c = column(*indent);
      Sequence<T> seq;
      while (not at_pile_end(parser, c)) {
         if (not seq.empty())
            require_indentation_at(parser, c);
         if (auto x = rule(parser))
            seq.push_back(x);
         else
            break;
      }
      return seq;
   }

   // Parse a sequeence of comma-separared `production'.
   template<typename T>
   static Sequence<T>
   comma_separated(Parser* parser, const T* production(Parser*)) {
      Sequence<T> seq;
      do
         seq.push_back(must(parser, production, "parse error"));
      while (match(parser->context(), token::comma_tok));
      return seq;
   }

   // Parse a repeated application of operator that is left associative.
   template<int N, typename T>
   static const Ast*
   left_associative(Parser* parser, T rule(Parser*),
                    const token::Kind (&ops)[N]) {
      if (T expr = rule(parser)) {
         while (const OperatorAst* op =  parse_symbol(parser, ops))
            expr = parser->make_ast(op, expr,
                                    must(parser, rule,
                                         "expected and expression"));
         return expr;
      }
      return nullptr;
   }

   template<typename T>
   static const Ast*
   left_associative(Parser* parser, T rule(Parser*), token::Kind tok) {
      const token::Kind ops[] = { tok };
      return left_associative(parser, rule, ops);
   }

   // Parse a repeated application of operator that is right associative.
   template<int N>
   static const Ast*
   right_associative(Parser* parser, Production production,
                     const token::Kind (&ops)[N]) {
      if (const Ast* expr = production(parser)) {
         if (const OperatorAst* op = parse_symbol(parser, ops)) {
            const Ast* rhs = right_associative(parser, production, ops);
            if (rhs == nullptr)
               parser->error_at("missing right operand to ", *op->token());
            expr = parser->make_ast(op, expr, rhs);
         }
         return expr;
      }
      return nullptr;
   }

   static const Ast*
   right_associative(Parser* parser, Production prod, token::Kind tok) {
      const token::Kind ops[] = { tok };
      return right_associative(parser, prod, ops);
   }

   // -------------------------
   // -- Expressions parsers --
   // -------------------------

   // -- Parse a string literal.
   static const Ast*
   parse_string(Parser* parser) {
      if (auto t = match(parser->context(), token::literal_string_tok))
         return parser->make_literal(*t);
      return nullptr;
   }

   // Literal value token classes
   static constexpr token::Kind literal_tokens[] = {
      token::literal_integer_tok,
      token::literal_real_tok, 
      token::literal_boolean_tok,
      token::literal_character_tok,
      token::literal_string_tok,
      token::literal_ipv4_tok,
      token::literal_hex_tok
   };

   // Parse a literal value in the input source.
   // literal ::= boolean | character | integer | real | string
   static const LiteralAst*
   parse_literal(Parser* parser) {
      if (const Token* t = match_one(parser, literal_tokens))
         return parser->make_literal(*t);
      return nullptr;
   }

   // -- Operator names.

   // Suffix operartor token kind.
   static constexpr token::Kind suffix_ops[] = {
      token::exclamation_tok
   };

   // Exponentiation token kind.
   static constexpr token::Kind exponent_ops[] = {
      token::caret_tok
   };

   // Prefix operator token types
   static constexpr token::Kind prefix_ops[] = {
      token::minus_tok,
      token::not_tok,
      token::tilde_tok,
      token::hash_tok,
      token::key_tok
   };

   //  Multiplicative operator token kinds.
   static constexpr token::Kind mult_ops[] = {
      token::star_tok, token::slash_tok,
      token::div_tok, token::quo_tok,
      token::mod_tok, token::rem_tok
   };
   
   // Additive operator token kinds.
   static constexpr token::Kind additive_ops[] = {
      token::plus_tok,
      token::minus_tok
   };

   // Relational operator token kinds.
   static constexpr token::Kind relational_ops[] = {
      token::less_tok, 
      token::less_equal_tok,
      token::greater_tok, 
      token::greater_equal_tok
   };

   // Equality comparison operator token kinds.
   static constexpr token::Kind equality_ops[] = {
      token::double_equal_tok,
      token::not_equal_tok
   };

   // Logicaal operator token kinds.
   static constexpr token::Kind logical_ops[] = {
      token::and_tok,
      token::or_tok,
      token::implies_tok
   };

   // Interval operator token kind.
   static constexpr token::Kind interval_ops[] = {
      token::dot_dot_tok
   };

   // Return true if `k' designates a class of binary operator.
   static bool
   binary_operator(token::Kind k) {
      return member(k, exponent_ops) or member(k, mult_ops)
         or member(k, additive_ops) or member(k, relational_ops)
         or member(k, equality_ops) or member(k, logical_ops)
         or member(k, interval_ops);
   }

   // Return true if `k' designates a class of suffix or binary operator.
   static bool
   suffix_or_binary_operator(token::Kind k) {
      return member(k, suffix_ops) or binary_operator(k);
   }

   // Return true if `k' designates a class of prefix, suffix,
   // or binary operator.
   static bool
   any_operator(token::Kind k) {
      return member(k, prefix_ops) or suffix_or_binary_operator(k);
   }

   // -- Parse the name of an operator
   //   operator-name ::= "(" operator ")"
   static const Ast*
   parse_operator_name(Parser* parser) {
      if (staring_at(parser, token::open_paren_tok)
          and nth_token_is(parser->context(), 1, any_operator)
          and nth_token_is(parser->context(), 2, token::close_paren_tok)) {
         const Token* op = advance(parser->context());
         advance(parser->context(), 2);
         return parser->make_operator(*op);
      }
      return nullptr;
   }

   // -- Parse an identifier.
   static const IdentifierAst*
   parse_identifier(Parser* parser) {
      if (auto t = match(parser->context(), token::identifier_tok))
         return parser->make_identifier(*t);
      return nullptr;
   }

   // -- Must parse an identifier.
   static const IdentifierAst*
   parse_identifier_or_else(Parser* parser) {
      return must(parser, parse_identifier, "expected identifier");
   }

   // -- Parse a name.
   //   name ::= identifier | operator-name
   static const Ast*
   parse_name(Parser* parser) {
      if (const Ast* x = parse_operator_name(parser))
         return x;
      return parse_identifier(parser);
   }

   // Basic type token classes
   static constexpr token::Kind basic_type_tokens[] = {
      token::bool_tok, token::byte_tok,
      token::char_tok, token::int_tok, token::double_tok,
      token::string_tok,
      token::type_tok, token::prop_tok, token::axiom_tok,
      token::concept_tok, token::namespace_tok
   };
   
   // Parse a basic type.
   //    basic_type ::= "bool" | "byte" | "char" | "int" 
   //                 | "double" | "string" | "type" | "auto"
   //                 | "prop" | "namespace" | "concept"
   static const IdentifierAst*
   parse_basic_type(Parser* parser) {
      if (const Token* t = match_one(parser, basic_type_tokens))
         return parser->make_identifier(*t);
      return nullptr;
   }

   static const Ast* parse_nontag_type(Parser*);

   // -- Parse an enclosed comma separated expression sequence
   //   enclosure ::= "(" [ enclosed ] ")"
   //               | "[" [ enclosed ] "]"
   //               | "{" [ enclosed ] "}"
   //               | "[|" [ enclosed ] "|]"
   static constexpr token::Kind enclose_ops[] = {
      token::open_paren_tok,
      token::open_bracket_tok,
      token::open_brace_tok,
      token::open_mbracket_tok
   };

   static const Ast* parse_enclosed(Parser*, const Token*);

   // Finish parsing the maching bracket of an enclosure syntax.
   static const EnclosureAst*
   finish_enclosure(Parser* parser, const Ast* x, const Token* t) {
      const Token* u = require(parser, closer(t->kind));
      return parser->make_enclosure(parser->make_bracket(*t, *u), x);
   }
   
   static const EnclosureAst*
   parse_enclosure(Parser* parser) {
      if (const Token* open = match_one(parser, enclose_ops)) {
         if (auto close = match(parser->context(), closer(open->kind)))
            return parser->make_enclosure
               (parser->make_bracket(*open, *close), nullptr);
         return finish_enclosure(parser, parse_enclosed(parser, open), open);
      }
      return nullptr;
   }

   static const Ast* parse_parenthesis(Parser*);
   static const Ast* parse_arrow(Parser*);
   static const Ast* parse_statement(Parser*);

   // Parse a compound statement
   //   compound ::= pile(statement)
   static const CompoundAst*
   parse_compound(Parser* parser) {
      auto stmts = pile(parser, parse_statement);
      return parser->make_compound(stmts);
   }


   // Parse an elementary expression.
   //   elementary ::= literal | basic_type | name
   static const Ast*
   parse_elementary(Parser* parser) {
      if (at_eoi(parser->context()))
         return nullptr;
      else if (auto ast = parse_literal(parser))
         return ast;
      else if (auto ast = parse_basic_type(parser))
         return ast;
      return parse_name(parser);
   }

   // Parse a primary expression.
   //   primary ::= elementary | parenthesis | enclosure | compound
   static const Ast*
   parse_primary(Parser* parser) {
      if (auto ast = parse_elementary(parser))
         return ast;
      else if (auto ast = parse_parenthesis(parser))
         return ast;
      else if (layout_line_count(parser) > 1)
         return parse_compound(parser);
      return parse_enclosure(parser);
   }

   // -- Parse a field selector.
   //   selector ::= "." elementary
   static const Ast*
   parse_selector(Parser* parser) {
      if (not match(parser->context(), token::dot_tok))
         return nullptr;
      return must(parser, parse_elementary, "expected elementary expression");
   }
   
   static constexpr token::Kind definable_braces[] = {
      token::open_brace_tok, token::open_bracket_tok
   };

   static const ParameterAst* parse_parameter(Parser*);

   // -- Parse the tail of a bracketted form:
   //    bracketted-form-tail ::= [ parameter-list ] ("]" | "}")
   static const ClosedForm*
   parse_closed_form_tail(Parser* parser, const Token& t1) {
      Parameters parms;
      if (not staring_at(parser, closer(t1.kind)))
         parms = comma_separated(parser, parse_parameter);
      const Token* t2 = require(parser, closer(t1.kind));
      return parser->make_closed_form(parser->make_bracket(t1, *t2), parms);
   }

   static const Ast* parse_implication(Parser*);

   // -- Parse the restriction at the end of a call form.
   //
   static const Ast*
   parse_call_form_tail_restriction(Parser* parser) {
      if (match(parser->context(), token::bar_tok))
         return parse_implication(parser);
      return nullptr;
   }

   // -- Parse the comma-separated parameter list and closing parenthesis
   // -- of a call form.
   //    call-form-tail ::= [ parameter { "," parameter } ] ")" [ restriction ]
   static const CallForm*
   parse_call_form_tail(Parser* parser, const Token& id) {
      Parameters parms;
      if (not match(parser->context(), token::close_paren_tok)) {
         parms = comma_separated(parser, parse_parameter);
         require(parser, token::close_paren_tok);
      }
      auto restriction = parse_call_form_tail_restriction(parser);
      return parser->make_call_form(id, parms, restriction);
   }

   // A suffix operator token 'o' follows a parameter 'x'; return the AST
   // for the corresponding suffix form.
   static const SuffixForm*
   finish_suffix_form(Parser* parser, const ParameterAst* x, const Token& o) {
      auto op = parser->make_operator(o);
      return parser->make_suffix_form(op, x);
   }

   // Build a bare parameter AST for an identifier
   static const ParameterAst*
   make_parameter(Parser* parser, const IdentifierAst* id) {
      return parser->make_parameter(id, nullptr);
   }

   // Likewise, but given the identifier token.
   static const ParameterAst*
   make_parameter(Parser* parser, const Token& t) {
      return make_parameter(parser, parser->make_identifier(t));
   }

   // A suffix operator 'op' follwos a bare parameter 'id'; finish the AST
   // for the corresponding suffix form.
   static const SuffixForm*
   finish_suffix_form(Parser* parser, const Token& id, const Token& op) {
      return finish_suffix_form(parser, make_parameter(parser, id), op);
   }
